back.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-back
  labels:
    app: myapp
spec:
  containers:
  - name: myapp
    image: nginx
