service-f.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-front
  namespace: default
spec:
  ports:
    - name: web
      port: 8600
  selector:
    app: nginx
  type: ClusterIP
