example-network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.6
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: default
    - podSelector:
        matchLabels:
          role: myapp-front
    ports:
    - protocol: TCP
      port: 8600
  egress:
  - to:
    - ipBlock:
        cidr: 172.17.0.6
    ports:
    - protocol: TCP
      port: 8700
